Disable parallax until it works, for demonstration purposes.

--- a/css/style.css
+++ b/css/style.css
@@ -521,9 +521,10 @@ footer {
 /* line 30, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .chapter_title {
   background-image: url('../img/1/path.jpg?1369435802');
-  background-position: center 100%;
-  background-attachment: scroll; }
-/* line 41, sass/_chapter1.sass */
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed; }
+/* line 42, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .expectation_chart {
   background: url('../img/1/expectation_chart.svg?1369439694') left top no-repeat;
   background-size: contain;
@@ -531,7 +532,7 @@ footer {
   width: 870px;
   height: 280px;
   position: relative; }
-  /* line 49, sass/_chapter1.sass */
+  /* line 50, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .expectation_chart .data_point {
     background: rgba(0, 0, 0, 0.8);
     border-radius: 2px;
@@ -554,16 +555,16 @@ footer {
       border-right: 4px solid transparent;
       border-top: 4px solid rgba(0, 0, 0, 0.8);
       margin-bottom: -4px; }
-    /* line 62, sass/_chapter1.sass */
+    /* line 63, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point strong {
       display: block;
       font-family: "BodoniW01-PosterItalic";
       font-size: 24px; }
-    /* line 67, sass/_chapter1.sass */
+    /* line 68, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point.active {
       margin-top: 0;
       opacity: 1; }
-    /* line 71, sass/_chapter1.sass */
+    /* line 72, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-1 {
       left: 157px;
       top: 80px;
@@ -571,7 +572,7 @@ footer {
       -moz-transition-delay: 0.2s;
       -o-transition-delay: 0.2s;
       transition-delay: 0.2s; }
-    /* line 76, sass/_chapter1.sass */
+    /* line 77, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-2 {
       left: 319px;
       top: 46px;
@@ -579,7 +580,7 @@ footer {
       -moz-transition-delay: 0.4s;
       -o-transition-delay: 0.4s;
       transition-delay: 0.4s; }
-    /* line 81, sass/_chapter1.sass */
+    /* line 82, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-3 {
       left: 475px;
       top: 38px;
@@ -587,7 +588,7 @@ footer {
       -moz-transition-delay: 0.6s;
       -o-transition-delay: 0.6s;
       transition-delay: 0.6s; }
-    /* line 86, sass/_chapter1.sass */
+    /* line 87, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-4 {
       left: 642px;
       top: 2px;
@@ -595,7 +596,7 @@ footer {
       -moz-transition-delay: 0.8s;
       -o-transition-delay: 0.8s;
       transition-delay: 0.8s; }
-    /* line 91, sass/_chapter1.sass */
+    /* line 92, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-5 {
       background: #548e85;
       left: 804px;
@@ -612,11 +613,11 @@ footer {
         border-right: 4px solid transparent;
         border-top: 4px solid #548e85;
         margin-bottom: -4px; }
-/* line 98, sass/_chapter1.sass */
+/* line 99, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .increase_of_workers {
   background-image: url('../img/1/grumpy_man.jpg?1369442609');
   background-position: 70% center; }
-  /* line 103, sass/_chapter1.sass */
+  /* line 104, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .increase_of_workers p {
     clear: left;
     background: white;
@@ -635,24 +636,24 @@ footer {
       margin: 0.75em auto 0;
       width: 50px;
       border-bottom: 2px solid #383838; }
-    /* line 106, sass/_chapter1.sass */
+    /* line 107, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .increase_of_workers p span {
       display: block;
       line-height: 1;
       margin: 0.25em 0 0.5em;
       padding: 0.75em 0 0.75em;
       width: 100%; }
-      /* line 114, sass/_chapter1.sass */
+      /* line 115, sass/_chapter1.sass */
       .chapter-1-rethinking-retirement article .increase_of_workers p span strong {
         display: inline-block;
         font-family: "BodoniW01-PosterItalic";
         font-size: 60px;
         margin: 0 0.1em; }
-/* line 120, sass/_chapter1.sass */
+/* line 121, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .half_of_american_households {
   background-image: url('../img/1/jars.jpg?1369445831');
   background-position: 20% center; }
-  /* line 125, sass/_chapter1.sass */
+  /* line 126, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .half_of_american_households p {
     clear: left;
     background: white;
@@ -669,11 +670,11 @@ footer {
       margin: 0.75em auto 0;
       width: 50px;
       border-bottom: 2px solid #383838; }
-/* line 129, sass/_chapter1.sass */
+/* line 130, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .one_in_four_workers {
   background-image: url('../img/1/diner.jpg?1369444335');
   background-position: 20% center; }
-  /* line 134, sass/_chapter1.sass */
+  /* line 135, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .one_in_four_workers .contents div {
     clear: left;
     background: white;
