--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -30,8 +30,9 @@
   .chapter_title
     @extend .on_dark_background
     background-image: image-url('1/path.jpg')
-    background-position: center 100%
-    background-attachment: scroll
+    background-position: center
+    background-size: cover
+    background-attachment: fixed
 
   .percentage_of_workers
     p
