--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -138,4 +138,15 @@
       p.first
         @extend .major
 
+  .working_about_the_right_amount
+    @extend .quotation.left
+
+    .contents
+      background-image: image-url('1/quoter.jpg')
+
   .outro
+    @extend .half-width
+
+    .second
+      font-family: $caslon-bold
+      font-size: $font-size*1.3
