--- a/css/sass/_mixins.sass
+++ b/css/sass/_mixins.sass
@@ -1,3 +1,5 @@
+// Triangle Callouts
+
 %triangle-base
   content: ""
   position: absolute
@@ -49,6 +51,9 @@
     border-bottom: $size solid transparent
     border-left: $size solid $color
     margin-right: - ($size)
+
+
+// Boxes Over Background Images
 
 @mixin boxed($color, $position, $size, $text-alignment)
   clear: left
