--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -1,3 +1,5 @@
+// Format
+
 *
   @include box-sizing(border-box)
   position: relative
@@ -57,23 +59,13 @@ strong
 em
   font-style: italic
 
-// Content
+
+// Layout
 
 .contents
   margin: 0 auto
   max-width: $desktop
   padding: $line*2 0
-
-article
-  width: 100%
-
-section
-  @include clearfix
-  background: #fff
-  width: 100%
-  z-index: 3
-
-// Types
 
 .fixed
   position: fixed
@@ -87,45 +79,108 @@ section
   img
     width: 100%
 
-section.background-image
-  background-attachment: fixed
-  background-position: center
-  background-size: cover
-  padding: 3em 6em
+.half
+  float: left
+  margin-right: 2%
+  width: 49%
 
-section.chapter
-  text-align: center
+.half + .half
+  width: 49%
 
-  p
-    font-family: $font-chapter
-    text-transform: uppercase
 
-section.chapter_title
-  text-align: center
-  text-transform: uppercase
-  @extend .background-image
-  padding: 12em 0
+// Content Types
 
-  p
-    border-bottom: 2px solid $dark
-    display: inline-block
-    font-size: $font-size*0.9
-    letter-spacing: 1px
-    margin: 0 auto
-    padding: 0 1em .25em 1em
+section
+  @include clearfix
+  background: #fff
+  width: 100%
+  z-index: 3
 
-  h2
-    font-size: 44px
-    margin: 0
-  
-  &.on_dark_background
+  &.background-image
+    background-attachment: fixed
+    background-position: center
+    background-size: cover
+    padding: 3em 6em
+
+  &.chapter
+    text-align: center
+
     p
-      border-bottom: 2px solid rgba(255, 255, 255, .6)
+      font-family: $font-chapter
+      text-transform: uppercase
 
-    p,
+  &.chapter_title
+    text-align: center
+    text-transform: uppercase
+    @extend .background-image
+    padding: 12em 0
+
+    p
+      border-bottom: 2px solid $dark
+      display: inline-block
+      font-size: $font-size*0.9
+      letter-spacing: 1px
+      margin: 0 auto
+      padding: 0 1em .25em 1em
+
     h2
+      font-size: 44px
+      margin: 0
+    
+    &.on_dark_background
+      p
+        border-bottom: 2px solid rgba(255, 255, 255, .6)
+
+      p,
+      h2
+        color: #fff
+        @include text-shadow($dark 0 0 25px)
+
+  &.copy
+    p
+      font-size: 18px
+      line-height: 1.3
+
+  &.quotation
+    .contents
+      background-repeat: no-repeat
+      padding: 6em 0
+
+    blockquote
+      background: $green
       color: #fff
-      @include text-shadow($dark 0 0 25px)
+      display: block
+      padding: 2em
+      width: 50%
+
+      p
+        font-size: $font-size*1.2
+        margin-top: 0
+
+    cite
+      font-size: $font-size*0.9
+
+      strong
+        display: block
+        font-size: $font-size
+
+    &.left
+      float: left
+
+      blockquote
+        @include triangle-right(25px, $green)
+
+      .contents
+        background-position: 90% center
+
+    &.right
+      float: right
+
+      blockquote
+        @include triangle-left(25px, $green)
+
+      .contents
+        background-position: left
 
 .major
   font-family: $font-heading
@@ -138,10 +193,9 @@ section.chapter_title
   @extend .major
   font-size: 20px
 
-.copy
+.half-width
   p
-    font-size: 18px
-    line-height: 1.3
+    width: 50%
 
 .bordered
   border-top: 2px solid $dark
