--- a/css/style.css
+++ b/css/style.css
@@ -54,31 +54,37 @@ a img {
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block; }
 
-/* line 1, sass/_base.sass */
+/* line 3, sass/_mixins.sass */
+header.site_header nav li:hover:after, header.site_header nav li.current_chapter:after, .chapter-1-rethinking-retirement article .expectation_chart .data_point:after, .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-5:after {
+  content: "";
+  position: absolute;
+  left: 50%; }
+
+/* line 3, sass/_base.sass */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   position: relative; }
 
-/* line 5, sass/_base.sass */
+/* line 7, sass/_base.sass */
 a {
   color: #548e85; }
-  /* line 8, sass/_base.sass */
+  /* line 10, sass/_base.sass */
   a:hover {
     color: #383838; }
 
-/* line 11, sass/_base.sass */
+/* line 13, sass/_base.sass */
 input {
   margin: 0; }
 
-/* line 14, sass/_base.sass */
+/* line 16, sass/_base.sass */
 html,
 body {
   width: 100%;
   height: 100%; }
 
-/* line 19, sass/_base.sass */
+/* line 21, sass/_base.sass */
 html {
   background: white;
   color: #383838;
@@ -87,7 +93,7 @@ html {
   line-height: 24px;
   -webkit-font-smoothing: antialiased; }
 
-/* line 27, sass/_base.sass */
+/* line 29, sass/_base.sass */
 h1,
 h2,
 h3,
@@ -97,112 +103,175 @@ h6 {
   font-weight: normal;
   line-height: 1; }
 
-/* line 36, sass/_base.sass */
+/* line 38, sass/_base.sass */
 h1,
 h2 {
   font-family: "Bodoni W01 Poster";
   text-align: center;
   text-transform: uppercase; }
 
-/* line 42, sass/_base.sass */
+/* line 44, sass/_base.sass */
 h2 {
   font-size: 30px;
   margin: 24px 0;
   padding: 24px 0 0; }
 
-/* line 47, sass/_base.sass */
+/* line 49, sass/_base.sass */
 h3 {
   font-size: 18px;
   margin: 30px 0 12px; }
 
-/* line 51, sass/_base.sass */
+/* line 53, sass/_base.sass */
 p {
   margin: 24px 0; }
 
-/* line 54, sass/_base.sass */
+/* line 56, sass/_base.sass */
 strong {
   font-weight: bold; }
 
-/* line 57, sass/_base.sass */
+/* line 59, sass/_base.sass */
 em {
   font-style: italic; }
 
-/* line 62, sass/_base.sass */
+/* line 65, sass/_base.sass */
 .contents {
   margin: 0 auto;
   max-width: 800px;
   padding: 48px 0; }
 
-/* line 67, sass/_base.sass */
-article {
-  width: 100%; }
-
 /* line 70, sass/_base.sass */
-section {
-  overflow: hidden;
-  *zoom: 1;
-  background: white;
-  width: 100%;
-  z-index: 3; }
-
-/* line 78, sass/_base.sass */
 .fixed, header.site_header,
 header.story_header {
   position: fixed;
   left: 0;
   top: 0; }
 
-/* line 83, sass/_base.sass */
+/* line 75, sass/_base.sass */
 .bleed {
   width: 100%;
   height: 100%; }
-  /* line 87, sass/_base.sass */
+  /* line 79, sass/_base.sass */
   .bleed img {
     width: 100%; }
 
-/* line 90, sass/_base.sass */
-section.background-image, section.chapter_title, .chapter-1-rethinking-retirement article section.increase_of_workers, .chapter-1-rethinking-retirement article section.half_of_american_households, .chapter-1-rethinking-retirement article section.one_in_four_workers {
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  padding: 3em 6em; }
+/* line 82, sass/_base.sass */
+.half {
+  float: left;
+  margin-right: 2%;
+  width: 49%; }
 
-/* line 96, sass/_base.sass */
-section.chapter {
-  text-align: center; }
+/* line 87, sass/_base.sass */
+.half + .half {
+  width: 49%; }
+
+/* line 93, sass/_base.sass */
+section {
+  overflow: hidden;
+  *zoom: 1;
+  background: white;
+  width: 100%;
+  z-index: 3; }
   /* line 99, sass/_base.sass */
-  section.chapter p {
-    font-family: "Bodoni MT W01", "Times New Roman", Times, serif;
-    text-transform: uppercase; }
-
-/* line 103, sass/_base.sass */
-section.chapter_title {
-  text-align: center;
-  text-transform: uppercase;
-  padding: 12em 0; }
-  /* line 109, sass/_base.sass */
-  section.chapter_title p {
-    border-bottom: 2px solid #383838;
-    display: inline-block;
-    font-size: 14.4px;
-    letter-spacing: 1px;
-    margin: 0 auto;
-    padding: 0 1em 0.25em 1em; }
-  /* line 117, sass/_base.sass */
-  section.chapter_title h2 {
-    font-size: 44px;
-    margin: 0; }
-  /* line 122, sass/_base.sass */
-  section.chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article section.chapter_title p {
-    border-bottom: 2px solid rgba(255, 255, 255, 0.6); }
-  /* line 125, sass/_base.sass */
-  section.chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article section.chapter_title p,
-  section.chapter_title.on_dark_background h2,
-  .chapter-1-rethinking-retirement article section.chapter_title h2 {
+  section.background-image, section.chapter_title, .chapter-1-rethinking-retirement article section.increase_of_workers, .chapter-1-rethinking-retirement article section.half_of_american_households, .chapter-1-rethinking-retirement article section.one_in_four_workers {
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    padding: 3em 6em; }
+  /* line 105, sass/_base.sass */
+  section.chapter {
+    text-align: center; }
+    /* line 108, sass/_base.sass */
+    section.chapter p {
+      font-family: "Bodoni MT W01", "Times New Roman", Times, serif;
+      text-transform: uppercase; }
+  /* line 112, sass/_base.sass */
+  section.chapter_title {
+    text-align: center;
+    text-transform: uppercase;
+    padding: 12em 0; }
+    /* line 118, sass/_base.sass */
+    section.chapter_title p {
+      border-bottom: 2px solid #383838;
+      display: inline-block;
+      font-size: 14.4px;
+      letter-spacing: 1px;
+      margin: 0 auto;
+      padding: 0 1em 0.25em 1em; }
+    /* line 126, sass/_base.sass */
+    section.chapter_title h2 {
+      font-size: 44px;
+      margin: 0; }
+    /* line 131, sass/_base.sass */
+    section.chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article section.chapter_title p {
+      border-bottom: 2px solid rgba(255, 255, 255, 0.6); }
+    /* line 134, sass/_base.sass */
+    section.chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article section.chapter_title p,
+    section.chapter_title.on_dark_background h2,
+    .chapter-1-rethinking-retirement article section.chapter_title h2 {
+      color: white;
+      text-shadow: #383838 0 0 25px; }
+  /* line 140, sass/_base.sass */
+  section.copy p {
+    font-size: 18px;
+    line-height: 1.3; }
+  /* line 145, sass/_base.sass */
+  section.quotation .contents {
+    background-repeat: no-repeat;
+    padding: 6em 0; }
+  /* line 149, sass/_base.sass */
+  section.quotation blockquote {
+    background: #548e85;
     color: white;
-    text-shadow: #383838 0 0 25px; }
+    display: block;
+    padding: 2em;
+    width: 50%; }
+    /* line 156, sass/_base.sass */
+    section.quotation blockquote p {
+      font-size: 19.2px;
+      margin-top: 0; }
+  /* line 160, sass/_base.sass */
+  section.quotation cite {
+    font-size: 14.4px; }
+    /* line 163, sass/_base.sass */
+    section.quotation cite strong {
+      display: block;
+      font-size: 16px; }
+  /* line 167, sass/_base.sass */
+  section.quotation.left, .chapter-1-rethinking-retirement article section.working_about_the_right_amount {
+    float: left; }
+    /* line 44, sass/_mixins.sass */
+    section.quotation.left blockquote:before, .chapter-1-rethinking-retirement article section.working_about_the_right_amount blockquote:before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      right: 0;
+      margin-top: -25px;
+      border-top: 25px solid transparent;
+      border-bottom: 25px solid transparent;
+      border-left: 25px solid #548e85;
+      margin-right: -25px; }
+    /* line 173, sass/_base.sass */
+    section.quotation.left .contents, .chapter-1-rethinking-retirement article section.working_about_the_right_amount .contents {
+      background-position: 90% center; }
+  /* line 176, sass/_base.sass */
+  section.quotation.right {
+    float: right; }
+    /* line 32, sass/_mixins.sass */
+    section.quotation.right blockquote:before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 0;
+      margin-top: -25px;
+      border-top: 25px solid transparent;
+      border-bottom: 25px solid transparent;
+      border-right: 25px solid #548e85;
+      margin-left: -24px; }
+    /* line 182, sass/_base.sass */
+    section.quotation.right .contents {
+      background-position: left; }
 
-/* line 130, sass/_base.sass */
+/* line 185, sass/_base.sass */
 .major, .major-alt, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .intro p.first,
 .chapter-1-rethinking-retirement article .intro p.third, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .half_of_american_households p, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first {
   font-family: "Proxima N W01 Bold", "Century Gothic", Helvetica, Arial, sans-serif;
@@ -211,28 +280,21 @@ section.chapter_title {
   text-transform: uppercase;
   line-height: 1.3; }
 
-/* line 137, sass/_base.sass */
+/* line 192, sass/_base.sass */
 .major-alt, .chapter-1-rethinking-retirement article .intro p.second {
   font-size: 20px; }
 
-/* line 142, sass/_base.sass */
-.copy p {
-  font-size: 18px;
-  line-height: 1.3; }
+/* line 197, sass/_base.sass */
+.half-width p, .chapter-1-rethinking-retirement article .outro p {
+  width: 50%; }
 
-/* line 146, sass/_base.sass */
+/* line 200, sass/_base.sass */
 .bordered, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .increase_of_workers p span {
   border-top: 2px solid #383838;
   border-bottom: 2px solid #383838;
   margin: 0 auto;
   padding: 0.5em 0 0.4em 0;
   width: 75%; }
-
-/* line 1, sass/_mixins.sass */
-header.site_header nav li:hover:after, header.site_header nav li.current_chapter:after, .chapter-1-rethinking-retirement article .expectation_chart .data_point:after, .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-5:after {
-  content: "";
-  position: absolute;
-  left: 50%; }
 
 /* line 1, sass/_header.sass */
 header.site_header,
@@ -345,7 +407,7 @@ header.site_header {
         -moz-transition: all, 0.2s;
         -o-transition: all, 0.2s;
         transition: all, 0.2s; }
-      /* line 17, sass/_mixins.sass */
+      /* line 19, sass/_mixins.sass */
       header.site_header nav li:hover:after, header.site_header nav li.current_chapter:after {
         bottom: 0;
         margin-left: -7px;
@@ -547,7 +609,7 @@ footer {
     -moz-transition: all, 0.3s;
     -o-transition: all, 0.3s;
     transition: all, 0.3s; }
-    /* line 17, sass/_mixins.sass */
+    /* line 19, sass/_mixins.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point:after {
       bottom: 0;
       margin-left: -4px;
@@ -605,7 +667,7 @@ footer {
       -moz-transition-delay: 1s;
       -o-transition-delay: 1s;
       transition-delay: 1s; }
-      /* line 17, sass/_mixins.sass */
+      /* line 19, sass/_mixins.sass */
       .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-5:after {
         bottom: 0;
         margin-left: -4px;
@@ -627,7 +689,7 @@ footer {
     width: 40%;
     float: left;
     text-align: center; }
-    /* line 70, sass/_mixins.sass */
+    /* line 75, sass/_mixins.sass */
     .chapter-1-rethinking-retirement article .increase_of_workers p .major:after, .chapter-1-rethinking-retirement article .increase_of_workers p .major-alt:after, .chapter-1-rethinking-retirement article .increase_of_workers p .intro p.second:after, .chapter-1-rethinking-retirement article .intro .increase_of_workers p p.second:after, .chapter-1-rethinking-retirement article .increase_of_workers p .intro p.first:after, .chapter-1-rethinking-retirement article .intro .increase_of_workers p p.first:after,
     .chapter-1-rethinking-retirement article .increase_of_workers p .intro p.third:after,
     .chapter-1-rethinking-retirement article .intro .increase_of_workers p p.third:after, .chapter-1-rethinking-retirement article .increase_of_workers p .percentage_of_workers p:after, .chapter-1-rethinking-retirement article .percentage_of_workers .increase_of_workers p p:after, .chapter-1-rethinking-retirement article .increase_of_workers p .half_of_american_households p:after, .chapter-1-rethinking-retirement article .half_of_american_households .increase_of_workers p p:after, .chapter-1-rethinking-retirement article .increase_of_workers p .one_in_four_workers .contents div p.first:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .increase_of_workers p p.first:after {
@@ -663,7 +725,7 @@ footer {
     width: 40%;
     float: left;
     text-align: center; }
-    /* line 70, sass/_mixins.sass */
+    /* line 75, sass/_mixins.sass */
     .chapter-1-rethinking-retirement article .half_of_american_households p .major:after, .chapter-1-rethinking-retirement article .half_of_american_households p .major-alt:after, .chapter-1-rethinking-retirement article .half_of_american_households p p:after, .chapter-1-rethinking-retirement article .half_of_american_households p .one_in_four_workers .contents div p.first:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .half_of_american_households p p.first:after {
       content: "";
       display: block;
@@ -684,7 +746,7 @@ footer {
     width: 60%;
     float: right;
     text-align: center; }
-    /* line 70, sass/_mixins.sass */
+    /* line 75, sass/_mixins.sass */
     .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .major:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .major-alt:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .intro p.second:after, .chapter-1-rethinking-retirement article .intro .one_in_four_workers .contents div p.second:after,
     .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .intro p.third:after,
     .chapter-1-rethinking-retirement article .intro .one_in_four_workers .contents div p.third:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .percentage_of_workers p:after, .chapter-1-rethinking-retirement article .percentage_of_workers .one_in_four_workers .contents div p:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .half_of_american_households p:after, .chapter-1-rethinking-retirement article .half_of_american_households .one_in_four_workers .contents div p:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first:after {
@@ -693,6 +755,13 @@ footer {
       margin: 0.75em auto 0;
       width: 50px;
       border-bottom: 2px solid #383838; }
+/* line 144, sass/_chapter1.sass */
+.chapter-1-rethinking-retirement article .working_about_the_right_amount .contents {
+  background-image: url('../img/1/quoter.jpg?1369452684'); }
+/* line 150, sass/_chapter1.sass */
+.chapter-1-rethinking-retirement article .outro .second {
+  font-family: "Adobe Caslon W01 Bd";
+  font-size: 20.8px; }
 
 /* line 2, sass/_chapter4.sass */
 .how_long_work .under_65 {
