--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -144,8 +144,12 @@
     .contents
       background-image: image-url('1/quoter.jpg')
 
+  .quotation.paul
+    //
+
   .outro
     @extend .half-width
+    @extend .hr-top
 
     .second
       font-family: $caslon-bold
