add multi-background mixin and annotations

--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -31,7 +31,7 @@
     @extend .on_dark_background
     background-image: image-url('1/path.jpg')
     background-position: center
-    background-size: cover
+    // background-size: cover
     background-attachment: fixed
 
   .percentage_of_workers
