--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -97,8 +97,10 @@ section
   z-index: 3
 
   &.background-image
+    // incompatible with 3d transform tricks
     background-attachment: fixed
     background-position: center
+    // has severe performance issues:
     background-size: cover
     padding: 3em 6em
 
@@ -126,7 +128,7 @@ section
     h2
       font-size: 44px
       margin: 0
-    
+
     &.on_dark_background
       p
         border-bottom: 2px solid rgba(255, 255, 255, .6)
@@ -222,4 +224,3 @@ section
     display: block
     border-top: 2px solid $dark
     width: 100%
-    
